// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App displaying errors displays errors that child pages set 1`] = `
Array [
  AppErrorInfo {
    "key": "mocked-for-snapshots",
    "message": "A test error happened",
  },
]
`;

exports[`App when authenticated user consented to data sharing renders the page component 1`] = `
<TestComponent
  appLogic={
    Object {
      "claims": null,
      "createClaim": [Function],
      "loadClaims": [Function],
      "login": [Function],
      "requireUserConsentToDataAgreement": [Function],
      "submitClaim": [Function],
      "updateClaim": [Function],
    }
  }
  query={Object {}}
  setAppErrors={[Function]}
  setUser={[Function]}
  title="Test page"
  user={
    User {
      "auth_id": "mock-auth-id",
      "consented_to_data_sharing": true,
      "date_of_birth": null,
      "email_address": "mock@example.com",
      "has_state_id": null,
      "state_id": null,
      "status": null,
      "user_id": "mock-user-id",
    }
  }
>
  <div>
    Hello world
  </div>
</TestComponent>
`;

exports[`App when the authenticated user fails to be fetched from the API displays error for NetworkError 1`] = `
Array [
  AppErrorInfo {
    "key": "mocked-for-snapshots",
    "message": "Sorry, an error was encountered. This may occur for a variety of reasons, including temporarily losing an internet connection or an unexpected error in our system. If this continues to happen, you may call the Paid Family Leave Contact Center at (XXX) XXX-XXXX",
  },
]
`;

exports[`App when the authenticated user fails to be fetched from the API displays error for unsuccessful response 1`] = `
Array [
  AppErrorInfo {
    "key": "mocked-for-snapshots",
    "message": "Sorry, we were unable to retrieve your account. Please log out and try again. If this continues to happen, you may call the Paid Family Leave Contact Center at (XXX) XXX-XXXX",
  },
]
`;
